engine/tests/fixtures/invalid/ui/entity-dummy.tg
entity entity_dummy {
  name "Dummy"
  description "Entity for invalid UI tests"

  fields {
    id uuid required
  }

  status active
}
